Database structure updates and implemented displaying information on homepage